src/objects/NA1__c.object
<CustomObject>
    <description>Test SVN</description>
    <fields>
        <fullName>NA11__c</fullName>
        <label>NA11</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA12__c</fullName>
        <label>NA12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NA1__c</fullName>
        <description>NA1 Test234</description>
        <label>NA1</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>NA1</label>
    <nameField>
        <label>NA1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NA1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>